[project]
name = "proxify-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "uvicorn>=0.41.0",
]
